--- a/ansible/master/ansible/init_apache2.yml
+++ b/ansible/master/ansible/init_apache2.yml
@@ -2,4 +2,4 @@
 - hosts: web
   tasks:
   - name: Start service apache2, if not started
-    service: name=apache2 state=started
+    service: name=apache2 state=restarted
